<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- activity_my_helper_main中文信息 -->	
    <string name="app_name">Android事务管理专家</string>
    <string name="app_enter">欢迎进入</string>
    <string name="action_settings">设置</string>
    <string name="app_exit_title">退出提示</string>
    <string name="app_exit_message">您是否要退出我的生活小管家?</string>
    <string name="app_exit_exitbutton">退出</string>
    <string name="app_exit_cancel">取消</string>
    <string name="affair_helper">事务达人</string>
    <string name="health_helper">健康管家</string>
    <string name="birthday">生日馆</string>
    <string name="festival">节日港</string>
    <string name="mode">情景秀</string>
    <string name="flahlight">电筒君</string>
    <string name="main_setting">设置</string>  
    <string name="note">备忘录</string>
    <string name="diary">日记箱</string>
    <string name="account">小账本</string>
    
    <!-- 备忘录页面中文信息 -->
    <string name="note_content">备忘内容</string>
    <string name="note_time">提醒时间</string>
    <string name="note_sound">铃声提醒</string>
	<string name="note_shake">震动提醒</string>   
	<string name="note_dialog_title">操作提醒</string> 
	<string name="note_dialog_message">是否确认提交</string>
	<string name="note_dialog_commit">确定</string>
	<string name="note_dialog_cancel">取消</string>
    <string name="note_dialog_timeup_title">时间到提醒</string>
    <string name="note_dialog_known">我知道了</string>
    <string name="note_noti_tips">你添加最新备忘录提醒</string>
    <string name="note_noti_title">备忘录提醒</string>
    <string name="noti_message">点击这里查看</string>
    
    
    <!-- 日记页面中文信息 -->
    <string name="diary_title">秘密日记</string>
    <string name="diary_choose_emotion">请选择现在的心情</string>
    <string name="diary_choose_time">请选择时间</string>
	<string name="diary_emotion">心情状况</string>
	<string name="diary_content">正文</string>
	<string name="diary_name">标题</string>
	<string name="diary_time">时间</string>
	<string name="diary_cancel">删除日记</string>
	<string name="diary_delete_sucess">日记删除成功</string>
	<string name="diary_time_edt">修改时间</string>
	<string name="diary_add_title">添加日记</string>
	<string name="diary_commit">提交</string>
	<string name="diary_add_message">亲，今天的生活点滴都记录好了吗？</string>
	<string name="diary_add_yes">好了</string>
	<string name="diry_add_no">我再想想</string>
	<string name="diary_emotion_add">添加心情</string>
	
	<!-- 经济账本页面中文信息 -->
	<string name="economy_title">月份</string>
	<string name="economy_in_out">记账类型</string>
	<string name="economy_add_sort">添加</string>
	<string name="economy_add_title">添加收支记录</string>
	<string name="economy_please_choose">请选择</string>
	<string name="economy_in">收入</string>
	<string name="economy_out">支出</string>
	<string name="economy_sort">费用类型</string>
	<string name="economy_cook">菜谱</string>
	<string name="economy_fee">金额</string>
	<string name="economy_exchange">货币兑换</string>
	<string name="economy_date">日期</string>
	<string name="economy_time">时间</string>
	<string name="economy_change">修改</string>
	<string name="economy_content">内容</string>
	<string name="economy_analyse_title">经济小助手告诉您，情况如下: </string>
	<string name="economy_analyse_items">记录条数是: </string>
	<string name="economy_analyse_total">总额为: </string>
	
	
	
	<!-- 经济建议 -->
	<string name="suggestion1">哇，你本月用了很少钱喔，你果然是个勤俭节约的好孩纸。大眼仔都要向你学习啦！</string>
	<string name="suggestion2">本月的收支比较平衡，合理的理财能为生活带来不少方便和收益，不错！！</string>
	<string name="suggestion3">额，，本月好像透支了，不知不觉做了月光族了，人艰不拆啊！！</string>
	<string name="suggestion4">啊，本月你严重透支了，看来你今晚的饭餐没有着落了。。。。</string>
	
	
	<!-- 健康伴侣 -->
	<string name="health_main_step">计步器</string>
	<string name="health_step_set">私人定制</string>
	<string name="health_set_type">运动类型</string>
	<string name="health_set_sense">灵敏度</string>
	<string name="health_set_steplenght">步长：</string>
	<string name="health_set_weight">体重：</string>
	<string name="health_set_maxvalue">临界值提醒</string>
	<string name="health_set_reset">默认值</string>
	<string name="health_set_karovalue">设定消耗：</string>
	<string name="health_set_kenoledge_karoli">科学小学堂之卡路里</string>
	<string name="health_set_run">跑步</string>
	<string name="health_set_walk">散步</string>
	<string name="health_set_sure_make">亲，设置好数据了吗？</string>
	<string name="health_set_finish">保存成功</string>
	<string name="health_step_count">步数</string>
	<string name="health_step_speed">步速</string>
	<string name="health_step_speed2">速度</string>
	<string name="health_step_consume">消耗</string>
	<string name="health_step_start">开始</string>
	<string name="health_step_stop">暂停</string>
	<string name="health_step_cancel">停止</string>
	<string name="health_step_renew">清零</string>
	<string name="health_step_exit">退出</string>
	<string name="step_notification_tip">计步器已经在后台运行</string>
	<string name="step_begin">计步器已启动，不要退出程序，按Home键返回桌面</string>
	<string name="step_notification_title">让脂肪燃烧吧！！！</string>
	<string name="health_bmi_title">BMI测试</string>
	<string name="health_bmi_height">身高:</string>
	<string name="health_bmi_weight">体重:</string>
	<string name="health_bmi_value">您的BMI值:</string>
	<string name="health_bmi_explain">关于BMI值的说</string>
	<string name="health_bmi_submit">计算BMI值</string>
	<string name="health_bmi_retract">收起</string>
	
	<!-- 天气通 -->
	<string name="health_weather_icon">天气通</string>
	<string name="weather_forecast_three">未来三天</string>
	
	<!-- 电筒君 -->
	<string name="flash_list_title">选择类型</string>
	<string name="flash_list_camera">后置闪光灯</string>
	<string name="flash_list_screen">屏幕电筒</string>
	<string name="flssh_list_shine">炫彩变换</string>
	<string name="flash_sign_white">信号灯</string>
	<string name="flash_scroll_tips">亲，可左右滑动切换其他颜色</string>
	<string name="flash_no_light">亲，很抱歉，你的设备没有闪光灯喔</string>
	
	<!-- 生日界面中文信息 -->
	<string name="birthday_recently">最近生日的亲们:</string>
	<string name="birthday_click_pic">点击图片切换头像</string>
	<string name="birthday_indiviual">人物资料</string>
	<string name="birthday_relation">关系:</string>
	<string name="birthday_nickname">昵称:</string>
	<string name="birthday_family">家人</string>
	<string name="birthday_classmate">同事</string>
	<string name="birthday_friend">朋友</string>
	<string name="birthday_other">其他</string>
	<string name="birthday_name">姓名</string>
	<string name="birthday_sex">性别:</string>
	<string name="birthday_birth">出生年月:</string>
	<string name="birthday_constellation">星座:</string>
	<string name="birthday_constellation_check">查看星座</string>
	<string name="birthday_favourite">喜爱的东西</string>
	<string name="birthday_remind">开启短信祝福</string>
	<string name="birthday_wish">在这里请写下你的祝福问候喔....</string>
	<string name="birthday_auto_constellation">系统自动匹配好星座</string>

	<string name="sport_add">添加运动</string>
	<string name="sport_histroy">历史记录</string>
	<string name="sport_bmi">BMI值</string>
	
		
	<!-- 科普知识的介绍 -->
	<string name="introduce_calorie">卡路里（简称卡，缩写为cal），由英文Calorie音译而来，其定义为将1克水在1大气压下提升1℃所需要的热量。
	    卡路里（calorie）是能量单位，现在仍被广泛使用在营养计量和健身手册上，国际标准的能量单位是焦耳（joule）。
	    作为食物热量的法定单位。</string>
	 <string name="bmi_calorie">BMI指数（身体质量指数，简称体质指数又称体重指数，英文为Body Mass Index，简称BMI）， 
	        是用体重公斤数除以身高米数平方得出的数字，是目前国际上常用的衡量人体胖瘦程度以及是否健康的一个标准。 主要用于统计用途，
	        当我们需要比较及分析一个人的体重对于不同高度的人所带来的健康影响时，BMI值是一个中立而可靠的指标 专家指出最理想的体重指数是22。</string>
</resources>






















