<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical"   
    android:background="@drawable/commonback"
    
    >
    <ScrollView 
        android:layout_height="fill_parent"
        android:layout_width="fill_parent" 
        android:layout_marginTop="10dp"
    	android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp"     
        >
        
   <LinearLayout 
        android:layout_height="fill_parent"
    	android:layout_width="fill_parent"
    	android:orientation="vertical"             
        >          
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        >      
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/account_tv_in_out"
            android:text="@string/economy_in_out"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            />        
        <RadioGroup 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:id="@+id/account_add_radiogroup"
            >
            <RadioButton 
                android:text="@string/economy_in"
                android:id="@+id/radio_income"
                android:layout_marginRight="20dip"
                />
            <RadioButton 
                android:text="@string/economy_out"
                android:id="@+id/radio_outcome"
                android:layout_marginLeft="20dip"
                />            
        </RadioGroup>       
    </LinearLayout>
          
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        >
        
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1.0"            
            android:text="@string/economy_sort"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            />
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dip"
            >
            <Spinner 
            android:layout_height="50dp"
            android:layout_width="fill_parent"
            android:layout_weight="1.0"
            android:prompt="@string/economy_please_choose"
            android:spinnerMode="dropdown"
            android:id="@+id/account_sp_sort"
            />
        	<Button 
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="2.0"
            android:background="@drawable/btn_style_green"
            android:paddingTop="10dip"
            android:paddingBottom="10dip"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"            
            android:text="@string/economy_add_sort"
            android:textSize="20sp"
            android:id="@+id/accout_add_sort"
            />          
        </LinearLayout>
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        >       
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/economy_fee"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            />
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:orientation="horizontal"
            >
            <EditText 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:singleLine="true"
            android:maxEms="10"
            android:maxWidth="50dp"
            android:numeric="decimal"
            android:id="@+id/edtFee"
            />
        <Button 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:background="@drawable/btn_style_green"
            android:paddingTop="10dip"
            android:paddingBottom="10dip"
            android:paddingLeft="5dip"
            android:paddingRight="5dip" 
            android:id="@+id/economy_exchange"
            android:textSize="20sp"
            android:text="@string/economy_exchange"
            />                              
        </LinearLayout>
        
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        >     
        <TextView 
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:text="@string/economy_date"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            />              
        <DatePicker 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/account_datepicker"                      
            />        
            
       <TextView
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:layout_marginTop="10dip"
           android:text="@string/economy_time"
           android:layout_marginLeft="5dp"
           android:textSize="20sp" 
           />      
        <TimePicker 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/account_timepicker"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >   
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="3.0"
            android:textSize="20sp"
            android:text="@string/economy_content"
            />
        <EditText 
            android:layout_width="fill_parent"
            android:layout_height="100dip"
            android:layout_weight="1.0"
            android:gravity="top"
            android:id="@+id/edt_economy_content"
            />
    </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>


























