<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"  
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"   
    >
    
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">   
        <LinearLayout 	
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView 
                android:layout_width="100dp"                
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/diary_name"
                android:textSize="20sp"
                />
            <EditText 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_diary_name"             
                /> 
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView 
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/diary_emotion"
                android:gravity="center"
                android:textSize="20sp"            
                />
            <Spinner 
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:id="@+id/spinner_emotion" 
                />            
            <Button 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_add_emotion"
                android:text="@string/diary_emotion_add"
                android:textSize="20sp"
                />
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView 
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/diary_time"
                />
            <EditText 
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/edt_diary_time"
                android:editable="false"
                />
            <Button 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_time_edt"
                android:text="@string/diary_time_edt"
                android:textSize="20sp"
                />    
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView 
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:text="@string/diary_content"
                />
            
            <EditText 
                android:layout_width="fill_parent"
                android:layout_height="500dp"
                android:gravity="top"
                
                />
            
        </LinearLayout>
        
    </LinearLayout>
    
    
	</ScrollView>
    
</LinearLayout>




















