<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"   
    android:background="@drawable/commonback"
    >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        
        <Button 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style_green"
            android:textStyle="bold"
            android:paddingTop="6dip"
            android:paddingBottom="6dip"
            android:id="@+id/btn_health_set"
            android:text="@string/health_step_set"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            />
        
        <RelativeLayout 
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:text="@string/health_step_count"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="18sp"
                android:text="0"
                android:id="@+id/tv_health_steps"
                />           
        </RelativeLayout >
    
        
        <RelativeLayout 
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:text="@string/health_step_speed"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="18sp"
                android:text="0"
                android:id="@+id/tv_health_speed"
                />           
        </RelativeLayout >
        
        <RelativeLayout 
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:text="@string/health_step_speed2"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="18sp"
                android:text="0"
                android:id="@+id/tv_health_speed2"
                />           
        </RelativeLayout >
        
         <RelativeLayout 
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:text="@string/health_step_consume"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="18sp"
                android:text="0"
                android:id="@+id/tv_health_consume"
                />           			
        </RelativeLayout >
        
          <Button 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="@drawable/btn_style_green"
            android:paddingTop="6dip"
            android:paddingBottom="6dip"
            android:id="@+id/btn_health_start"
            android:text="@string/health_step_start"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dip"
            />
          
           <Button 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="@drawable/btn_style_green"
            android:paddingTop="6dip"
            android:paddingBottom="6dip"
            android:enabled="false"
            android:id="@+id/btn_health_stop"
            android:text="@string/health_step_stop"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dip"
            />
           
            <Button 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="@drawable/btn_style_green"
            android:paddingTop="6dip"
            android:paddingBottom="6dip"
            android:enabled="false"
            android:id="@+id/btn_health_cancel"
            android:text="@string/health_step_cancel"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dip"
            />
            
            
            <Button 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="@drawable/btn_style_green"
            android:paddingTop="6dip"
            android:paddingBottom="6dip"
            android:id="@+id/btn_health_exit"
            android:text="退出并保存"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dip"
            />
        
        
    </LinearLayout>  
</ScrollView>
































