<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back8"
    android:padding="@dimen/custom_pading"
    android:orientation="vertical"
    >
    <ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" >
	
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="vertical"
	        >
    		<LinearLayout 
	            android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dip"
		        android:orientation="horizontal"
		        android:gravity="center_vertical"
	            >
	            <TextView 
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:layout_weight="2.0"
	                android:textSize="20sp"
	                android:text="@string/health_bmi_height"
	                />
	            <EditText 
	                android:layout_width="match_parent"
		        	android:layout_height="wrap_content"
		        	android:layout_weight="1.0"
		        	android:id="@+id/health_bmi_height_edt"
		       		android:numeric="decimal"
	                />
	            <TextView 
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:layout_weight="2.0"
	                android:textSize="20sp"
	                android:text="cm"
	                />
	             </LinearLayout>
	            
	            <LinearLayout 
		            android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="5dip"
			        android:orientation="horizontal"
	            >
	            
	            <TextView 
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:textSize="20sp"
	                android:text="@string/health_bmi_weight"
	                android:layout_weight="2.0"
	                />
	            <EditText 
	                android:layout_width="match_parent"
		        	android:layout_height="wrap_content"
		        	android:id="@+id/health_bmi_weight_edt"
		        	android:layout_weight="1.0"
		       		android:numeric="decimal"
	                />
	            <TextView 
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:textSize="20sp"
	                android:text="kg"
	                android:layout_weight="2.0"
	                />	            
	        	</LinearLayout>
	        	
	            <Button 
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:background="@drawable/btn_style_green"
	                android:padding="@dimen/custom_pading"
	                android:id="@+id/health_bmi_sub"
	                android:layout_marginTop="10dip"
	                android:textSize="20sp"
	                android:text="@string/health_bmi_submit"
	                /> 
	                
	            <Button 
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:background="@drawable/btn_style_green"
	                android:padding="@dimen/custom_pading"
	                android:layout_marginTop="10dip"
	                android:id="@+id/health_bmi_btn"
	                android:textSize="20sp"
	                android:text="@string/health_bmi_explain"
	                /> 
	        	
	            
	            <LinearLayout 
		            android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="10dip"
			        android:orientation="horizontal"
			        android:gravity="center_vertical"
	            >
	            <TextView 
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_weight="1.0"
	                android:textSize="20sp"
	                android:text="@string/health_bmi_value"
	                />
	               
	             <EditText 
	                android:layout_width="fill_parent"
		        	android:layout_height="wrap_content"
		        	android:hint="待测试..."
		        	android:layout_weight="1.0"
		        	android:id="@+id/health_bmi_value_show"
		        	android:editable="false"
		        	android:cursorVisible="false"
	                />	                  
	        	</LinearLayout> 
	        	
	            <TextView 
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="10dip"
	                android:textSize="20sp"
	                android:text="分析反馈"
	                />
	            
	            <TextView 
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="5dip"
	                android:textSize="20sp"
	                android:id="@+id/health_bmi_tv"
	                android:padding="@dimen/custom_pading"
	                android:background="@drawable/lv_style_green"
	                android:text="待测试..."
	                />
	                	          

	      </LinearLayout>        
	</ScrollView>        
    
</LinearLayout>









